# idlecontainer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  publish.yml  release.yaml
src/: cli.cpp  container_manager.cpp  container_manager.h  docker_client.cpp  docker_client.h  docker_exception.cpp  docker_exception.h  exceptions.cpp  exceptions.h  procstat.cpp  procstat.h
tests/: main_tests.cpp
